# fast-hyperbolic-dm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: fb15k237.yaml  wn18rr.yaml
notebooks/: analysis.ipynb
scripts/: benchmark.py  results.py  speedup.py  train.py
src/benchmarking/: __init__.py  profiler.py
src/data/: __init__.py  dataset.py  negative_sampling.py
src/layers/: __init__.py  dm_relational.py
src/models/: __init__.py  baseline_euclidean.py  baseline_hyperbolic.py  baseline_rotate.py  baseline_rotl.py  dm_kg_model.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: __init__.py  hyperbolic.py  metrics.py
suggestions/1/: claude.md  gemini.md
tests/: test_all.py
