[project]
name = "fast-hyperbolic-dm"
version = "0.1.0"
description = "Dvoretzky-Milman Projections for Multi-Relational Knowledge Graphs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Victor Pekkari" },
]
keywords = [
    "knowledge-graph",
    "hyperbolic-geometry",
    "graph-neural-networks",
    "link-prediction",
    "dvoretzky-milman",
    "representation-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.4.0,<2.7",
    "numpy>=1.24.0",
    "tensorboard>=2.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]
all = [
    "fast-hyperbolic-dm[dev,notebooks]",
]

[project.scripts]
train-dm-kg = "scripts.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Pin to macOS ARM64 to avoid resolving wheels for other platforms
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

# Use PyTorch's own index for better platform wheel coverage
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
